--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         env:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./ci
+          publish_branch: gh-pages
+          publish_dir: ./ci
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'Deploy commit: ${{ github.event.head_commit.message }}'
         if: github.ref == 'refs/heads/master'
