Change yapi image
Change-Id: I506b6b773f30d077ab07a0a72c38728f0988eab8

--- a/ci.env
+++ b/ci.env
@@ -10,7 +10,6 @@ CADDY_DOMAIN_YAPI=ci2.my.domain
 PORTAINER_ADMIN_PASSWD_HASHED=$2y$05$.GDofRFLsEhjmr.at4hiYOTUYXRuubWaP/n3tl4Gj0IbSZ42G51WK
 
 # yapi env
-YAPI_VERSION=1.8.9
 YAPI_DB_NAME=yapi_db_name
-YAPI_HOME=/yapi_home
 YAPI_ADMIN_EMAIL=ci@actions.github.com
+YAPI_ADMIN_PASSWD=1234
