--- a/ci.env
+++ b/ci.env
@@ -1,6 +1,8 @@
 # caddy env
 CADDY_PORT=11111
 CADDY_SSL_PORT=22222
+CADDY_ALICLOUD_ACCESS_KEY=12345
+CADDY_ALICLOUD_SECRET_KEY=12345
 CADDY_TLS_EMAIL=ci@actions.github.com
 CADDY_DOMAIN_PORTAINER=ci1.my.domain
 CADDY_DOMAIN_YAPI=ci2.my.domain
