--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
     environment:
       ACME_AGREE: 'true'
       TLS_EMAIL: ${CADDY_TLS_EMAIL}
+      ALICLOUD_ACCESS_KEY: ${CADDY_ALICLOUD_ACCESS_KEY}
+      ALICLOUD_SECRET_KEY: ${CADDY_ALICLOUD_SECRET_KEY}
       DOMAIN_PORTAINER: ${CADDY_DOMAIN_PORTAINER}
       DOMAIN_YAPI: ${CADDY_DOMAIN_YAPI}
     restart: unless-stopped
