Change caddy image
Change-Id: I0876f3b781a7675befe1017f06f9cf442d85ef53

--- a/caddy/Caddyfile.d/yapi.conf
+++ b/caddy/Caddyfile.d/yapi.conf
@@ -1,7 +1,8 @@
 {$DOMAIN_YAPI} {
   log /var/logs/yapi.log
-  dns alidns
-  tls {$TLS_EMAIL}
+  tls {$TLS_EMAIL} {
+    dns: alidns
+  }
   gzip
   proxy / yapi:3000
 }
