--- a/caddy/Caddyfile.d/portainer.conf
+++ b/caddy/Caddyfile.d/portainer.conf
@@ -1,7 +1,8 @@
 {$DOMAIN_PORTAINER} {
   log /var/logs/docker.log
-  dns: alidns
-  tls {$TLS_EMAIL}
+  tls {$TLS_EMAIL} {
+    dns: alidns
+  }
   gzip
   proxy / portainer:9000
 }
