Fix caddy files
Change-Id: I60afabf1b080797197b23267e156e48c4bbf62ce

--- a/caddy/Caddyfile.d/portainer.conf
+++ b/caddy/Caddyfile.d/portainer.conf
@@ -1,7 +1,7 @@
 {$DOMAIN_PORTAINER} {
   log /var/logs/docker.log
   tls {$TLS_EMAIL} {
-    dns: alidns
+    dns alidns
   }
   gzip
   proxy / portainer:9000
